fix navbar accessibility and visibility

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -60,8 +60,8 @@
 
                 img {
                     margin-right: 0;
-                    width: 24px;
-                    height: 24px;
+                    width: 2.4rem;
+                    height: 2.4rem;
                 }
             }
         }
@@ -115,6 +115,7 @@
 
             .bip {
                 height: 100%;
+                width: min-content;
                 margin: 0;
             }
         }
