--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -211,22 +211,17 @@
 
             &--active {
                 position: absolute;
-                top: 0;
+                top: 6.4rem;
                 left: 0;
                 display: flex;
                 align-items: center;
-                justify-content: space-evenly;
                 flex-direction: column;
-                min-height: 100vh;
-                height: max-content;
+                height: calc(100vh - 6.4rem);
                 width: 100%;
-                margin-top: 6.4rem;
-                padding: 0;
-                padding-bottom: 15rem;
-                padding-top: 3.5rem;
+                padding-top: 5rem;
                 box-shadow: none;
                 text-align: center;
-                overflow-y: scroll;
+                overflow: auto;
                 background-color: rgba(255, 255, 255, 1);
                 z-index: 9;
             }
@@ -262,16 +257,19 @@
 
         &__dropdown {
             position: static;
-            display: block;
-            opacity: 1;
             width: max-content;
-            min-height: 100%;
             margin: 0 auto;
             box-shadow: none;
 
             &-link {
                 box-shadow: none;
                 min-width: 320px;
+            }
+
+            &.show {
+                display: flex;
+                opacity: 1;
+                max-height: min-content;
             }
         }
     }
